ecmascript/parser/tests/test262-error-references/fail/49861fa3ca0ffc30.js.stderr
error: Expected ;, got )
 --> $DIR/tests/test262-parser/fail/49861fa3ca0ffc30.js:1:15
  |
1 | for ((i in {}));
  |               ^

